--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,234 +4,105 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:background="#01182B"
     tools:context=".RegisterActivity">
-    <ScrollView
+
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SIGN UP"
+        android:textColor="#F6F2F2"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        />
+
+    <EditText
+        android:id="@+id/txtfname"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="First Name"
+        android:textColorHint="#F6F2F2"
+        />
 
-            <ImageView
-                android:id="@+id/imageView_login"
-                android:layout_width="384dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.125"
-              />
+    <EditText
+        android:id="@+id/txtlname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Last Name"
+        android:textColorHint="#F6F2F2"
+        />
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="382dp"
-                android:layout_height="39dp"
-                android:text="SIGN UP"
-                android:textColor="#461D8F"
-                android:textColorHighlight="#1F2D7A"
-                android:textSize="20sp" />
+    <TextView
+        android:id="@+id/gender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Gender"
+        android:textColor="#F6F2F2"
+        android:textSize="16sp"
+        android:layout_marginTop="20dp"/>
 
-            <EditText
-                android:id="@+id/txtfname"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:hint="First Name"
-                />
-            <EditText
-                android:id="@+id/txtlname"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:hint="Last Name"
-                />
-            <TextView
-                android:id="@+id/gender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Gender"
-                android:textSize="16sp"
-                android:layout_marginTop="20dp"/>
+    <RadioGroup
+        android:id="@+id/rb_gender"
+        android:textColorHint="#F6F2F2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
-            <RadioGroup
-                android:id="@+id/rb_gender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp">
+        <RadioButton
+            android:id="@+id/rb_male"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Male"
+            android:textColor="#F6F2F2"/>
 
-                <RadioButton
-                    android:id="@+id/rb_male"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:height="48dp"
-                    android:text="Male" />
+        <RadioButton
+            android:id="@+id/rb_female"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Female"
+            android:textColor="#F6F2F2"/>
+    </RadioGroup>
 
-                <RadioButton
-                    android:id="@+id/rb_female"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:height="48dp"
-                    android:text="Female" />
-            </RadioGroup>
-            <EditText
-                android:id="@+id/txt_email"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:hint="Email" />
-            <!--        <Spinner-->
-            <!--            android:layout_marginTop="30dp"-->
-            <!--            android:id="@+id/userType"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="30dp"-->
-            <!--            ></Spinner>-->
+    <EditText
+        android:id="@+id/txt_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="Email"
+        android:textColorHint="#F6F2F2"/>
 
-            <!--        <EditText-->
-            <!--            android:id="@+id/txtfname"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            android:layout_marginTop="20dp"-->
-            <!--            android:hint="First Name"-->
-            <!--           />-->
-            <!--        <EditText-->
-            <!--            android:id="@+id/txtlname"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            android:layout_marginTop="20dp"-->
-            <!--            android:hint="Last Name"-->
-            <!--            />-->
-            <!--        <TextView-->
-            <!--            android:id="@+id/gender"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:text="Gender"-->
-            <!--            android:textSize="16sp"-->
-            <!--            android:layout_marginTop="20dp"/>-->
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:id="@+id/txt_pwd"
+        android:layout_marginTop="20dp"
+        android:textColorHint="#F6F2F2"/>
 
-            <!--        <RadioGroup-->
-            <!--            android:id="@+id/rb_gender"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:orientation="horizontal"-->
-            <!--            android:layout_marginTop="20dp">-->
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Confirm Password"
+        android:textColorHint="#F6F2F2"
+        android:inputType="textPassword"
+        android:id="@+id/txt_confirmpwd"
+        android:layout_marginTop="20dp"/>
 
-            <!--            <RadioButton-->
-            <!--                android:id="@+id/rb_male"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:height="48dp"-->
-            <!--                android:text="Male" />-->
-
-            <!--            <RadioButton-->
-            <!--                android:id="@+id/rb_female"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:height="48dp"-->
-            <!--                android:text="Female" />-->
-            <!--        </RadioGroup>-->
-            <!--        <EditText-->
-            <!--            android:id="@+id/txtnic"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            android:layout_marginTop="20dp"-->
-            <!--            android:hint="NIC" />-->
-            <!--        <EditText-->
-            <!--            android:id="@+id/txtdob"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:ems="10"-->
-            <!--            android:inputType="date"-->
-            <!--            android:hint="Date Of Birth"-->
-            <!--            android:layout_marginTop="20dp"/>-->
-            <!--        <TextView-->
-            <!--            android:id="@+id/status"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:text="Status"-->
-            <!--            android:textSize="16sp"-->
-            <!--            android:layout_marginTop="20dp"/>-->
-            <!--        <Spinner-->
-            <!--            android:id="@+id/sp_status"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:layout_marginTop="20dp"-->
-            <!--            android:entries="@array/array_status"-->
-            <!--           />-->
-            <!--        <EditText-->
-            <!--            android:id="@+id/txtaddress"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            android:layout_marginTop="20dp"-->
-            <!--            android:hint="Address" />-->
-            <!--        <EditText-->
-            <!--            android:id="@+id/txt_phone"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:ems="10"-->
-            <!--            android:inputType="phone"-->
-            <!--            android:hint="Phone Number"-->
-            <!--            android:layout_marginTop="20dp"/>-->
-
-
-            <!--        <TextView-->
-            <!--            android:id="@+id/district"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:text="District"-->
-            <!--            android:textSize="16sp"-->
-            <!--            android:layout_marginTop="20dp"-->
-            <!--            />-->
-            <!--        <Spinner-->
-            <!--            android:id="@+id/sp_district"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:entries="@array/array_district"/>-->
-
-            <!--        <TextView-->
-            <!--            android:id="@+id/attachment"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:text="Pay Rs.1000/= Fee and Attach your Recipt"-->
-            <!--            android:textSize="16sp"-->
-            <!--            android:layout_marginTop="20dp"/>-->
-            <!--        <EditText-->
-            <!--            android:id="@+id/txtattachment"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="200dp"-->
-            <!--            android:padding="10dp"-->
-            <!--            android:gravity="top"-->
-            <!--            android:hint="Please Attach the Payment Recipt."-->
-            <!--            android:inputType="textMultiLine"-->
-            <!--            android:textSize="14sp"-->
-            <!--            android:layout_marginTop="20dp"/>-->
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:layout_marginTop="20dp"
-                android:id="@+id/txt_pwd"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Confirm Password"
-                android:inputType="textPassword"
-                android:id="@+id/txt_confirmpwd"
-                android:layout_marginTop="20dp"/>
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Apply To Register"
-                android:layout_marginTop="20dp"/>
-
-
-
-
-        </LinearLayout>
-    </ScrollView>
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button_background"
+        android:text="Register"
+        android:textColor="@color/white"
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
