--- a/app/src/main/res/layout/activity_report_fish.xml
+++ b/app/src/main/res/layout/activity_report_fish.xml
@@ -1,6 +1,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#01182B"
+    >
+
+    <!-- Heading -->
+    <TextView
+        android:id="@+id/reportHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Report Fish Poisoning"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/white" />
 
     <!-- Display the fish name and image -->
     <TextView
@@ -8,47 +22,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_below="@id/reportHeading"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/black" />
 
     <ImageView
         android:id="@+id/reportFishImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="232dp"
+        android:layout_height="189dp"
         android:layout_below="@id/reportFishName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:background="@drawable/fish"
         android:scaleType="centerCrop" />
 
+    <!-- Add a button to select an image -->
+
     <!-- Provide an option for users to describe why they believe the fish is poisonous -->
+
+    <!-- Add a submit button -->
+    <Button
+        android:id="@+id/selectImageButton"
+        android:layout_width="141dp"
+        android:layout_height="27dp"
+        android:layout_below="@id/reportFishImage"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:background="@color/blue"
+        android:text="Select Image"
+        android:textColor="@android:color/white" />
+
     <EditText
         android:id="@+id/reportDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/reportFishImage"
-        android:layout_marginTop="16dp"
+        android:layout_below="@id/selectImageButton"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="31dp"
         android:layout_marginEnd="16dp"
         android:hint="Describe why you believe the fish is poisonous"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:textColorHint="@android:color/darker_gray" />
 
-    <!-- Add a button to select an image -->
-    <Button
-        android:id="@+id/selectImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/reportDescription"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Select Image" />
-
-    <!-- Add a submit button -->
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/selectImageButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Submit Report" />
+        android:layout_width="100dp"
+        android:layout_height="22dp"
+        android:layout_below="@id/reportDescription"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="79dp"
+        android:layout_marginBottom="280dp"
+        android:background="@color/blue"
+        android:text="Report"
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
