--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/splash_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Detecting Fish Poisoning"
+        android:text="Smart Solution For Fish Poisoning"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
