--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#041925"
+    android:background="#48A6DC"
     tools:context=".MainActivity">
 
     <com.airbnb.lottie.LottieAnimationView
@@ -21,7 +21,7 @@
         android:id="@+id/splash_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Smart Solution For Fish Poisoning"
+        android:text="Poison Fish Defender"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
